Reversed change applied for checking integration RStudio and Github

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
 output: 
-  html_document: "PA1_template.html"
+  html_document: 
     keep_md: true
 ---
 
