Intermediate result stored

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -72,7 +72,8 @@ daily total of steps. Using summary will automatically separate the NA's and
 show us some more info.
 
 ```{r tsd-mean, ECHO=TRUE}
-summary(DF_tsd$total)
+sum_raw <- summary(DF_tsd$total)
+sum_raw
 ```
 
 Obviously the mean of all daily steps appears to be 10.770 steps per day,
@@ -123,7 +124,96 @@ steps averaged across days. Namely roughly 206 steps.
 
 
 ## Imputing missing values
+Some of the measures are missing, in other words; during some intervals or
+even days, the steps taken were not registered. These missing measurements are 
+noted as NA's. Let's first look at the number of missing values (NA's).
+
+```{r NA-count1, ECHO=TRUE}
+sum(is.na(DF_raw$steps))        ##calculate NA's in Steps variable
+```
+
+Apparently there are 2304 missing values. Just to be sure that we NA's only
+occur in de steps variable, we will check hat the NA-count is over the complete
+tibble.
+
+```{r NA-count2, ECHO=TRUE}
+sum(is.na(DF_raw))              ##calculate NA's in complete dataframe
+```
+
+Clearly the number of NA's in the complete tibble is the same as the number
+of NA's in de steps variable (i.e. 2304).
+
+####Imputing strategy
+What will be the replacements for missing values?. Looking at the distribution with the peak around 8:30, replacement of NA's with the mean of a complete day would ruin the pattern and because in some cases complete days are missing would result in an additional NA. A better solution seems to be to impute values that coincide with the mean of that specific interval. This will retain the activity pattern across the day.
+
+When imputing the missing values, we need to do that with the mean of the interval at hand. Using dplyr's mutate and replace the NA with 'mean(steps') would result in the mean of all steps in the dataframe. That is why we use group_by(interval). Calling mean(steps) will then return the mean for the interval rather than the overall mean.
+
+```{r NA-imputing, ECHO=TRUE}
+DF_nas <-                                     ## create new tibble
+        DF_raw %>%                            ## derived from DF_raw
+        group_by(interval) %>%                ## grouped to get mean/interval
+        mutate(steps = ifelse(is.na(steps),   ## replace steps if value is NA
+        as.integer(mean(steps, na.rm=TRUE)),  ## with the mean of the interval
+        steps)) %>%                           ## or leave steps alone.
+        group_by() %>%                        ## Remove the interval grouping
+        print                                 ## and take a peek
+```
+
+We can see that the NA's are replaced by the interval means.
+Next we recalculate the total number of steps taken each day. Using dplyr we
+again group the tibble by date and sum the steps into a column named 'total'.
+
+```{r totalstepsdailynas, ECHO=TRUE}
+DF_tsdnas <-                                 ## dplyr-code to create DF-tsd
+        DF_nas %>%                           ## use DF-nas to
+        select(steps, date) %>%              ## select relevant columns
+        group_by(date) %>%                   ## group them by date
+        summarize(total = sum(steps)) %>%    ## calculate the sum of steps
+        print()                              ## and take a peek
+```
+
+Now let's regenerate the histogram of the frequency of the number of steps taken
+daily to get an idea of the change in the most frequent values.
+
+```{r tsd-hist-nas, ECHO=TRUE}
+with(DF_tsdnas, hist(total,                           ## freq. daily steps
+     main = "Histogram - Number of daily steps",      ## set main title
+     xlab = "Number of daily steps",                  ## set label X-axis
+     ylab = "Frequency"))                             ## set label Y-axis
+```
+
+Apparently the most frequent number of daily steps still lies between 10k and 
+15k steps per day, but the number of observations between 10k and 15k has risen
+from approx. 28 to approx. 36. Using the interval mean clearly tightened the
+number of daily steps towards the mean, as can be expected.
+
+Finally we need to take a another look at the mean and the median of the 
+daily total of steps, again using summary.
+
+```{r tsdnas-mean, ECHO=TRUE, results="asis"}
+library(xtable)
+sum_nas <- summary(DF_tsdnas$total)
+dt <- t(matrix(unname(sum_raw)))
+dt <- rbind(dt, c(unname(sum_nas), "0"))
+xt <- xtable(dt,
+             caption="Comparison of summaries",
+             digits=c(0,0,0,0,0,0,0,0),
+             auto = TRUE)
+colnames(xt) <- c(" ", " Min ", " 1st Qu ", " Median ", " Mean ", " 3rd Qu  ", "  NAs   ")
+rownames(xt) <- c("Original", "Imputed")
+align(xt) <- "p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}"
+print(xt, type = "html", html.table.attributes = "cellspacing='10'")
+```
+
+|  | Mean | Median |
+|----|----|----|
+| Original |`r as.integer(mean(DF_tsdnas$total))` | `r as.integer(median(DF_tsdnas$total))`|
+| Imputed |`r as.integer(mean(DF_tsd$total))` | `r as.integer(median(DF_tsd$total))`|
 
 
+After imputing the interval mean, obviously the mean of all daily steps appears 
+to have changed from 10.770 to 10.750 steps per day, while the median changed
+from 10.760 to 10.640 steps/day. Apparantly the imputed values are low and drag
+down the mean. No NA's remain now.
 
 ## Are there differences in activity patterns between weekdays and weekends?
