All work done, ready for final personal review. Last one beore final commit

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,7 +7,7 @@ output:
 
 author : Gerrit Versteeg
 
-date   : Oct 12th, 2016
+date   : Oct 14th, 2016
 
 
 ## Loading and preprocessing the data
@@ -17,33 +17,33 @@ repo, we do not have to download the file again.
 _Note: the original data was downloaded in RPeng's Repo on Feb 11th, 2014._  
 
 First step to take is unzipping 'activity.zip' into a ./data directory and then
-read the resulting 'activity.csv' into a tibble called 'DF-raw' using dplyr. 
+read the resulting 'activity.csv' into a dataset called 'DF-raw' using dplyr. 
 A peek of the content is shown.
 
 ```{r loading,ECHO = TRUE}
-library("dplyr", warn.conflicts=FALSE)
-if (file.exists("./data/activity.csv")) {
-        unlink("./data/activity.csv")
+library("dplyr", warn.conflicts=FALSE)             ## load dplyr silently
+if (file.exists("./data/activity.csv")) {          ## check if file exists
+        unlink("./data/activity.csv")              ## if so -> delete 
 }
-unzip("./activity.zip", exdir = "./data")
-DF_raw <- tbl_df(read.csv("./data/activity.csv"))
-DF_raw
+unzip("./activity.zip", exdir = "./data")          ## unzip into data dir
+DF_raw <- tbl_df(read.csv("./data/activity.csv"))  ## load into a dataset
+DF_raw                                             ## and take a peek
 ```
 
 Next step is to pre-process the data for analysis. Obviously the date is 
-formatted as factor, inhibiting processing in weekdays and weekend. So we need
-to reformat that variable to the 'Date' format. 
+formatted as factor, inhibiting processing in weekdays and weekend later on.
+So we need to reformat that variable to the 'Date' format. 
 
 ```{r Preprocessing,ECHO=TRUE}
-DF_raw$date <- as.Date(strptime(DF_raw$date, "%Y-%m-%d"))
-class(DF_raw$date)
+DF_raw$date <- as.Date(strptime(DF_raw$date, "%Y-%m-%d"))  ## reformat to date
+class(DF_raw$date)                                         ## show class
 ```
 
 
 ## What is mean total number of steps taken per day?
 
 First we calculate the total number of steps taken each day. Using dplyr we
-group the tibble by date and sum the steps into a column named 'total'.
+group the dataset by date and sum the steps into a column named 'total'.
 
 ```{r totalstepsdaily, ECHO=TRUE}
 DF_tsd <-                                    ## dplyr-code to create DF-tsd
@@ -53,6 +53,9 @@ DF_tsd <-                                    ## dplyr-code to create DF-tsd
         summarize(total = sum(steps)) %>%    ## calculate the sum of steps
         print()                              ## and take a peek
 ```
+
+Note: you can see that there are days with no observations at all.
+
 
 Now let's plot a histogram of the frequency of the number of steps taken daily 
 to get an idea of the most frequent values.
@@ -64,7 +67,7 @@ with(DF_tsd, hist(total,                              ## freq. daily steps
      ylab = "Frequency"))                             ## set label Y-axis
 ```
 
-Apparently the most frequent number of daily steps lies between 10k and 15k 
+Apparently the most frequent number of daily steps lies between **10k and 15k** 
 steps per day.
 
 Finally we need to take a look at the mean and the median of the 
@@ -72,35 +75,38 @@ daily total of steps. Using summary will automatically separate the NA's and
 show us some more info.
 
 ```{r tsd-mean, ECHO=TRUE}
-sum_raw <- summary(DF_tsd$total)
-sum_raw
+sum_raw <- as.integer(summary(DF_tsd$total))  ## store for later comparison
+summary(DF_tsd$total)                         ## show summary with mean & median
 ```
 
-Obviously the mean of all daily steps appears to be 10.770 steps per day,
-while the median is 10.760 steps/day. Also visible is the fact that there are
+Obviously the mean of all daily steps appears to be **10.770** steps per day,
+while the median is **10.760** steps/day. Also visible is the fact that there are
 8 days with no step registration at all.
 
 
 ## What is the average daily activity pattern?
 Now we want to take a look at the daily activity pattern using the average
-number of steps taken in each time interval. Looging at the variable 'interval'
+number of steps taken in each time interval. Looking at the variable 'interval'
 we see that the intervals vary from 0 (00:00-04:59) up to 2355 (23:55-23:59).
 These 288 (60*24/5) values will be the time-series used for the activity
-pattern, while we compute the mean of the daily number of steps for each these
-intervals (ignoring any NA-values). 
+pattern, while we compute the mean of the daily number of steps for each of
+these intervals (ignoring any NA-values). 
 
 ```{r dailyactivitypattern, ECHO=TRUE}
 DF_dap <-                                    ## dplyr-code to create DF-dap
         DF_raw %>%                           ## use DF-raw to
         select(steps, interval) %>%          ## select relevant columns
         group_by(interval) %>%               ## group them by interval
-        summarize(avg = mean(steps, 
-                  na.rm = TRUE)) %>%         ## calculate the mean across days
+        summarize(avg = mean(steps,          ## calculate the mean of the
+                  na.rm = TRUE)) %>%         ## interval across days
         print()                              ## and take a peek
 ```
 
-Now let's plot this as time-series, showing the average (across days) of 
-steps taken during each specific interval of a day. 
+Asc an be expected, there is not much activity going on just after midnight.
+
+
+Now for the activity pattern of an average day, let's plot this as a time-series,
+showing the average (across days) of steps taken during each specific interval. 
 
 ```{r dap-plot, ECHO=TRUE}
 with(DF_dap, plot(interval, avg,             ## plot DF_dap (avg.steps˜interval)
@@ -110,17 +116,18 @@ with(DF_dap, plot(interval, avg,             ## plot DF_dap (avg.steps˜interval
      ylab = "Average number of steps"))      ## set label Y-axis
 ```
 
-Looking at the resulting pattern, there seems to be a clear peak in the morning,
-that might indicate a morning run or walk each day prior to going to work. 
-If we like to see in which specific interval the peak lies, we select and print 
-the row where the average equals the maximum value.
+Looking at the resulting pattern, there seems to be a clear peak in the morning
+(over **200** steps in 5-minutes). This might indicate a morning run or walk
+each day prior to going to work.  
+Because we like to see in which specific interval this peak lies exactly, 
+we select and print the row where 'average' equals the maximum value.
 
 ```{r dap-max, ECHO=TRUE}
-filter(DF_dap, avg == max(avg))
+filter(DF_dap, avg == max(avg))  ## select row of interval with max # of steps
 ```
 
-The result shows that interval 835 (08:35-08:39) contains the highest number of
-steps averaged across days. Namely roughly 206 steps. 
+The result shows that interval **835** (08:35-08:39) contains the highest number of
+steps averaged across days. Namely roughly **206** steps. 
 
 
 ## Imputing missing values
@@ -129,27 +136,40 @@ even days, the steps taken were not registered. These missing measurements are
 noted as NA's. Let's first look at the number of missing values (NA's).
 
 ```{r NA-count1, ECHO=TRUE}
-sum(is.na(DF_raw$steps))        ##calculate NA's in Steps variable
+sum(is.na(DF_raw$steps))        ## calculate NA's in Steps variable
 ```
 
-Apparently there are 2304 missing values. Just to be sure that we NA's only
-occur in de steps variable, we will check hat the NA-count is over the complete
-tibble.
+Apparently there are **2304** missing values. Just to be sure that NA's only
+occur in de steps variable, we will check the NA-count over all variables in
+the dataset.
 
 ```{r NA-count2, ECHO=TRUE}
-sum(is.na(DF_raw))              ##calculate NA's in complete dataframe
+sum(is.na(DF_raw))              ## calculate NA's in complete dataframe
 ```
 
-Clearly the number of NA's in the complete tibble is the same as the number
-of NA's in de steps variable (i.e. 2304).
+Clearly the number of NA's in the complete dataset is the same as the number
+of NA's in de steps variable (i.e. 2304). Therefor NA's only occurr in the
+variable 'steps'.
 
 ####Imputing strategy
-What will be the replacements for missing values?. Looking at the distribution with the peak around 8:30, replacement of NA's with the mean of a complete day would ruin the pattern and because in some cases complete days are missing would result in an additional NA. A better solution seems to be to impute values that coincide with the mean of that specific interval. This will retain the activity pattern across the day.
+What will be the replacements for missing values?. Looking at the distribution 
+with the peak around 8:30, replacement of NA's with the mean of a complete day
+would ruin the pattern and because in some cases complete days are missing would
+result in an additional NA.  
+A better solution seems to be to impute values that coincide with the mean of 
+that specific interval. This will retain the activity pattern across the day.
 
-When imputing the missing values, we need to do that with the mean of the interval at hand. Using dplyr's mutate and replace the NA with 'mean(steps') would result in the mean of all steps in the dataframe. That is why we use group_by(interval). Calling mean(steps) will then return the mean for the interval rather than the overall mean.
+
+When imputing the missing values, we need to do that with the mean of the 
+interval at hand. Using dplyr's mutate to replace the NA with 'mean(steps')
+would result in the mean of all steps in the dataframe, if we leave the dataset
+as is. To fill it with the means per interval, we first group the dataset using
+group_by(interval). Calling mean(steps) will now return the mean for the interval
+rather than the overall mean. After determining the mean, we remove the grouping
+because the resulting dataset does not need grouping per interval.
 
 ```{r NA-imputing, ECHO=TRUE}
-DF_nas <-                                     ## create new tibble
+DF_nas <-                                     ## create new dataset
         DF_raw %>%                            ## derived from DF_raw
         group_by(interval) %>%                ## grouped to get mean/interval
         mutate(steps = ifelse(is.na(steps),   ## replace steps if value is NA
@@ -160,11 +180,13 @@ DF_nas <-                                     ## create new tibble
 ```
 
 We can see that the NA's are replaced by the interval means.
+
+
 Next we recalculate the total number of steps taken each day. Using dplyr we
-again group the tibble by date and sum the steps into a column named 'total'.
+group the dataset by date and sum the steps into a column named 'total'.
 
 ```{r totalstepsdailynas, ECHO=TRUE}
-DF_tsdnas <-                                 ## dplyr-code to create DF-tsd
+DF_tsdnas <-                                 ## dplyr-code to create DF-tsdnas
         DF_nas %>%                           ## use DF-nas to
         select(steps, date) %>%              ## select relevant columns
         group_by(date) %>%                   ## group them by date
@@ -182,38 +204,92 @@ with(DF_tsdnas, hist(total,                           ## freq. daily steps
      ylab = "Frequency"))                             ## set label Y-axis
 ```
 
-Apparently the most frequent number of daily steps still lies between 10k and 
-15k steps per day, but the number of observations between 10k and 15k has risen
-from approx. 28 to approx. 36. Using the interval mean clearly tightened the
-number of daily steps towards the mean, as can be expected.
+Apparently the most frequent number of daily steps still lies between **10k and 
+15k** steps per day, but the number of observations between 10k and 15k has risen
+from approx. **28** to approx. **36**. Imputing NA's with the interval mean 
+apparantly tightened the number of daily steps towards the mean, as can be 
+expected.
 
 Finally we need to take a another look at the mean and the median of the 
 daily total of steps, again using summary.
 
-```{r tsdnas-mean, ECHO=TRUE, results="asis"}
-library(xtable)
-sum_nas <- summary(DF_tsdnas$total)
-dt <- t(matrix(unname(sum_raw)))
-dt <- rbind(dt, c(unname(sum_nas), "0"))
-xt <- xtable(dt,
-             caption="Comparison of summaries",
-             digits=c(0,0,0,0,0,0,0,0),
-             auto = TRUE)
-colnames(xt) <- c(" ", " Min ", " 1st Qu ", " Median ", " Mean ", " 3rd Qu  ", "  NAs   ")
-rownames(xt) <- c("Original", "Imputed")
-align(xt) <- "p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}|p{2cm}"
-print(xt, type = "html", html.table.attributes = "cellspacing='10'")
+```{r tsdnas-mean, ECHO=TRUE}
+sum_nas <- as.integer(summary(DF_tsdnas$total)) ## store for comparison
+summary(DF_tsdnas$total)                        ## show summary for mean/median
 ```
 
-|  | Mean | Median |
-|----|----|----|
-| Original |`r as.integer(mean(DF_tsdnas$total))` | `r as.integer(median(DF_tsdnas$total))`|
-| Imputed |`r as.integer(mean(DF_tsd$total))` | `r as.integer(median(DF_tsd$total))`|
+The new mean is **10.750** steps/day, while the new median adds up to **10.640*
+steps/day.
 
+Comparing the results:
+
+|   | Min | Median | Mean |  Max  | NAs |
+|----|----|----|----|----|----|
+| Original |`r sum_raw[[1]]` |`r sum_raw[[3]]` |`r sum_raw[[4]]` |`r sum_raw[[6]]` |`r sum_raw[[7]]` |
+| Imputed  |`r sum_nas[[1]]` |`r sum_nas[[3]]` |`r sum_nas[[4]]` |`r sum_nas[[6]]` | |
 
 After imputing the interval mean, obviously the mean of all daily steps appears 
 to have changed from 10.770 to 10.750 steps per day, while the median changed
-from 10.760 to 10.640 steps/day. Apparantly the imputed values are low and drag
-down the mean. No NA's remain now.
+from 10.760 to 10.640 steps/day. Apparantly the imputed values are lower than
+the original mean and therefore drag down the mean. No NA's remain now.
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+To be able to distinguish between weekdays and weekend days, we need to add
+another variable 'ww' to the dataset DF_nas (note: this is the dataset with the 
+imputed values). Using the weekdays function on the variable 'date'
+(that was reformated into date whilst cleaning the data at the start) 
+we will check to see whether the data is a 'saturday' or a 'sunday". If so,
+we set 'ww' to 'weekend' otherwise to 'weekday'.
+
+
+While we're at it, we next group the dataset on 'ww' and 'interval' because we
+now need to calculate the mean number of daily steps for each type of day
+(weekday or weekend) **and** for each interval across all days.
+
+```{r create-ww-column, ECHO=TRUE}
+WE <- c("Saturday", "Sunday")
+DF_nasw <-                                   ## dplyr-code to create DF-nasw
+        DF_nas %>%                           ## use DF-nas to
+        mutate(ww = ifelse(weekdays(date)    ## add a column 'ww'
+                           %in% WE,          ## check if weekday = Sat or Sun
+                           "weekend",        ## then fill it with "weekend"
+                           "weekday")) %>%   ## else fill it with "weekday"
+        print                                ## and take a peek
+
+DF_dapw <-                                   ## dplyr-code to create DF-dapw
+        DF_nasw %>%                          ## use DF-nasw to
+        select(steps, interval, ww) %>%      ## select the relevant columns
+        group_by(ww, interval) %>%           ## group them by ww & interval
+        summarize(avg = mean(steps, 
+                  na.rm = TRUE)) %>%         ## calculate the mean across days
+        print                                ## and take a peek
+```
+
+Now that we have the dataset that we need, we can start to plot this
+as a time-series in two frames (one for weekend and onde for weekdays), showing
+the average (across days) of steps taken during each specific interval of these
+two types of days. 
+
+*Please note that I use ggplot2 for this plot, because I like the way it shows
+multiple facets. This differs a bit from the example plot given by our mentor. 
+He stated that is not needed to reproduce the figure exactly as is. As long as
+the comparison is facilitated in roughly the same manner. So I hope you don't
+mind*
+
+```{r dapw-plot, ECHO=TRUE}
+library(ggplot2)
+g <- ggplot(DF_dapw, aes(interval, avg))             ## setup graphic object for ggplot
+g+geom_path()+                                       ## plot the path
+        facet_grid(ww~.) +                           ## setup the grid (2 rows x 1 column)
+        xlab("5-minute interval") +                  ## label X-axis
+        ylab("Average number of steps") +            ## label Y-axis
+        ggtitle("Daily Activity Patterns compared")
+
+```
+
+Activity appears to start **earlier** in weekdays (around 05:00) than in weekends
+(around 07:30). The **'workout' pattern** is still visible during weekdays, refering
+to the peak around 8:30 followed by lower activity during the remainder of the
+day. While during weekends, activity is **spread more evenly** across the day.
+
