--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -65,7 +65,7 @@ to get an idea of the most frequent values.
 ```{r tsd-hist, ECHO=TRUE}
 with(DF_tsd, hist(total,                              ## freq. daily steps
      main = "Histogram - Number of daily steps",      ## set main title
-     xlab = "Number of daily steps",                  ## set label X-axis
+     xlab = "Total number of daily steps",            ## set label X-axis
      ylab = "Frequency"))                             ## set label Y-axis
 ```
 
@@ -116,7 +116,7 @@ specific interval.
 with(DF_dap, plot(interval, avg,             ## plot DF_dap (avg.steps˜interval)
      type ="l",                              ## using a line-plot
      main = "Daily Activity Pattern",        ## set main title
-     xlab = "5-minute interval",             ## set label X-axis
+     xlab = "5-minute Interval",             ## set label X-axis
      ylab = "Average number of steps"))      ## set label Y-axis
 ```
 
@@ -207,7 +207,7 @@ of the number of steps taken daily.
 ```{r tsd-hist-ina, ECHO=TRUE}
 with(DF_tsdina, hist(total,                           ## freq. daily steps
      main = "Histogram - Number of daily steps",      ## set main title
-     xlab = "Number of daily steps",                  ## set label X-axis
+     xlab = "Total number of daily steps",            ## set label X-axis
      ylab = "Frequency"))                             ## set label Y-axis
 ```
 
@@ -297,7 +297,7 @@ g+geom_path()+                                       ## plot the path
         facet_grid(ww~.) +                           ## setup grid (2row x 1col)
         xlab("5-minute interval") +                  ## label X-axis
         ylab("Average number of steps") +            ## label Y-axis
-        ggtitle("Daily Activity Patterns compared")  ## title the graph
+        ggtitle("Daily Activity Patterns Compared")  ## title the graph
 ```
 
 Activity appears to start **earlier** in weekdays (around 05:00) than in 
